# hsreadability

./: LICENSE  hsreadability.cabal
src/Network/: Readability.hs
src/Network/Readability/: Parser.hs  Reader.hs  Shortener.hs
tests/: Main.hs
tests/files/: confidence_response.json  parser_article.json
