name:                hsreadability
version:             0.1.0.0
synopsis:            Access to the Readability API.
-- description:         
license:             MIT
license-file:        LICENSE
author:              Alexey Shmalko
maintainer:          rasen.dubi@gmail.com
copyright:           Copyright 2015 Alexey Shmalko
category:            Network APIs
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Network.Readability.Parser
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
                     , aeson >=0.8 && <0.9
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
